<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#39393E"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="30dp"
        android:layout_margin="15dp"
        android:background="#88F0D1"
        android:gravity="center|right"
        android:textColor="#0000ff"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:weightSum="4">
        <Button
            android:id="@+id/ac"    
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/ac"
            android:textColor="#ff0000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle"
            />
        <Button
            android:id="@+id/power"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/pov"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle"
            />
        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/back"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle"
            />
        <Button
            android:id="@+id/div"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/div"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:weightSum="4">
        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/_7"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights"
            />
        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="8"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights"
            />
        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/_9"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights"
            />
        <Button
            android:id="@+id/mul"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/mul"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:weightSum="4">
        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/_4"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights"
            />
        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/_5"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights"
            />
        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/_6"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights"
            />
        <Button
            android:id="@+id/sub"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/sub"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:weightSum="4">
        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/_1"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights"
            />
        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/_2"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights"
            />
        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/_3"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights"
            />
        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/add"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:weightSum="4">
        <Button
            android:id="@+id/point"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/point"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights"
            />
        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/_0"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights"
            />
        <Button
            android:id="@+id/ans"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/ans"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,NestedWeights"
            />
        <Button
            android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/equals"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights"
            />
    </LinearLayout>

</LinearLayout>

